[WIP] refactoring, attributes available for new mappings in separate compartments, next working on consolidating typing for continuous mappings

--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -1,9 +1,7 @@
 <h1>
   {{'MAIN_INFO_TITLE' | translate}}
-  <img src="assets/img/ndexedit_logo.png" class="float-right mt-2" [ngStyle]="{'width.px': 75}">
+  <img [ngStyle]="{'width.px': 75}" class="float-right mt-2" src="assets/img/ndexedit_logo.png">
 </h1>
-
-<hr>
 
 <h3>{{'MAIN_INFO_STEPS_TITLE' | translate}}</h3>
 <p>{{'MAIN_INFO_STEPS_DESCRIPTION' | translate}}</p>
