--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -1,13 +1,15 @@
 <div class="p-2">
 
-  <h5 *ngIf="selectedNetwork.networkInformation.description">{{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}</h5>
+  <h5
+    *ngIf="dataService.networkSelected.networkInformation.description">{{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}</h5>
 
-  <div *ngIf="selectedNetwork.networkInformation.description">
-    <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
+  <div *ngIf="dataService.networkSelected.networkInformation.description">
+    <p [innerHTML]="dataService.networkSelected.networkInformation.description"></p>
   </div>
 
   <div *ngIf="showLabelCheckbox" class="form-check mb-2">
-    <input (click)="toggleLabels(!selectedNetwork.showLabels)" [checked]="selectedNetwork.showLabels" class="form-check-input" id="showLabels"
+    <input (click)="toggleLabels(!dataService.networkSelected.showLabels)"
+           [checked]="dataService.networkSelected.showLabels" class="form-check-input" id="showLabels"
            type="checkbox">
     <label class="form-check-label" for="showLabels">
       {{'SIDEBAR_EDIT_CB_LABELS' | translate}}
@@ -17,7 +19,7 @@
   <!-- chart for continuous mappings -->
   <div *ngIf="showChart">
     <h5>
-      <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, index]} }]" role="button">
+      <a [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, index]} }]" role="button">
         <b>{{lookup}}</b>
         {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
         <b>{{attribute}}</b>
@@ -35,7 +37,7 @@
   <!-- color gradient for continuous mappings -->
   <div *ngIf="showColorGradient">
     <h5>
-      <a [routerLink]="['', {outlets: {primary: ['mappings', selectedNetwork.id, index]} }]" role="button">
+      <a [routerLink]="['', {outlets: {primary: ['mappings', dataService.networkSelected.id, index]} }]" role="button">
         <b>{{lookup}}</b>
         {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
         <b>{{attribute}}</b>
@@ -64,7 +66,7 @@
             </a>
           </td>
         </tr>
-        <tr *ngFor="let akvn of selectedNetwork.aspectKeyValuesNodes">
+        <tr *ngFor="let akvn of dataService.networkSelected.aspectKeyValuesNodes">
           <td><b>{{akvn.name}}</b></td>
           <td *ngFor="let node of graphService.selectedElements.nodes">
             <span *ngFor="let attribute of node.attributes">
@@ -90,7 +92,7 @@
             </a>
           </td>
         </tr>
-        <tr *ngFor="let akve of selectedNetwork.aspectKeyValuesEdges">
+        <tr *ngFor="let akve of dataService.networkSelected.aspectKeyValuesEdges">
           <td><b>{{akve.name}}</b></td>
           <td *ngFor="let edge of graphService.selectedElements.edges">
             <span *ngFor="let attribute of edge.attributes">
@@ -107,11 +109,14 @@
 
 
   <div aria-orientation="horizontal" class="nav nav-pills flex-row" id="editsNav" role="tablist">
-    <a aria-controls="editsNavAspects" aria-selected="false" class="nav-link active" data-toggle="pill" href="#editsNavAspectsContent"
+    <a aria-controls="editsNavAspects" aria-selected="false" class="nav-link active" data-toggle="pill"
+       href="#editsNavAspectsContent"
        id="editsNavAspects" role="tab">{{'SIDEBAR_EDIT_ATTRIBUTES_TITLE' | translate}}</a>
-    <a aria-controls="editsNavStyles" aria-selected="false" class="nav-link" data-toggle="pill" href="#editsNavStylesContent"
+    <a aria-controls="editsNavStyles" aria-selected="false" class="nav-link" data-toggle="pill"
+       href="#editsNavStylesContent"
        id="editsNavStyles" role="tab">{{'SIDEBAR_EDIT_STYLE_TITLE' | translate}}</a>
-    <a aria-controls="editsNavHighlights" aria-selected="true" class="nav-link" data-toggle="pill" href="#editsNavHighlightsContent"
+    <a aria-controls="editsNavHighlights" aria-selected="true" class="nav-link" data-toggle="pill"
+       href="#editsNavHighlightsContent"
        id="editsNavHighlights" role="tab">{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</a>
 
   </div>
@@ -122,7 +127,8 @@
     <div aria-labelledby="editsNavAspects" class="tab-pane fade show active" id="editsNavAspectsContent"
          role="tabpanel">
 
-      <button [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, -1]} }]" class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip"
+      <button [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, -1]} }]"
+              class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip"
               ngbTooltip="{{'SIDEBAR_EDIT_TT_MANAGE_MAPPINGS' | translate}}"
               placement="bottom">
         <fa-icon [icon]="" class="mr-2"></fa-icon>
@@ -130,16 +136,18 @@
       </button>
 
       <h5
-        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.nodesDiscrete || selectedNetwork.mappings.nodesContinuous) && (selectedNetwork.mappings.nodesDiscrete.length > 0 || selectedNetwork.mappings.nodesContinuous.length > 0)">
+        *ngIf="dataService.networkSelected.mappings && (dataService.networkSelected.mappings.nodesDiscrete || dataService.networkSelected.mappings.nodesContinuous) && (dataService.networkSelected.mappings.nodesDiscrete.length > 0 || dataService.networkSelected.mappings.nodesContinuous.length > 0)">
         {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
       </h5>
 
-      <table *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0"
-             class="table table-bordered">
-        <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
+      <table
+        *ngIf="dataService.networkSelected.mappings && dataService.networkSelected.mappings.nodesDiscrete && dataService.networkSelected.mappings.nodesDiscrete.length > 0"
+        class="table table-bordered">
+        <tr *ngFor="let nodeMap of dataService.networkSelected.mappings.nodesDiscrete">
           <td>
-            <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]"
-               role="button">
+            <a
+              [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, 'nd' + dataService.networkSelected.mappings.nodesDiscrete.indexOf(nodeMap)]} }]"
+              role="button">
               <b>{{nodeMap.classifier}}</b>
             </a>
           </td>
@@ -176,9 +184,10 @@
         </tr>
       </table>
 
-      <ul *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0"
-          class="list-group mb-2">
-      <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous; let index = index">
+      <ul
+        *ngIf="dataService.networkSelected.mappings && dataService.networkSelected.mappings.nodesContinuous && dataService.networkSelected.mappings.nodesContinuous.length > 0"
+        class="list-group mb-2">
+      <span *ngFor="let nodeMap of dataService.networkSelected.mappings.nodesContinuous; let index = index">
         <li *ngIf="nodeMap.chartValid" class="list-group-item">
           <a (click)="displayMapping(nodeMap.chart, [], 'nc' + index)" role="button">
             <b>{{nodeMap.title[0]}}</b>
@@ -197,14 +206,16 @@
       </ul>
 
       <h5
-        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.edgesDiscrete || selectedNetwork.mappings.edgesContinuous) && (selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
+        *ngIf="dataService.networkSelected.mappings && (dataService.networkSelected.mappings.edgesDiscrete || dataService.networkSelected.mappings.edgesContinuous) && (dataService.networkSelected.mappings.edgesDiscrete.length > 0 || dataService.networkSelected.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
 
-      <table *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0"
-             class="table table-bordered">
-        <tr *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
+      <table
+        *ngIf="dataService.networkSelected.mappings && dataService.networkSelected.mappings.edgesDiscrete && dataService.networkSelected.mappings.edgesDiscrete.length > 0"
+        class="table table-bordered">
+        <tr *ngFor="let edgeMap of dataService.networkSelected.mappings.edgesDiscrete">
           <td>
-            <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]"
-               role="button">
+            <a
+              [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, 'ed' + dataService.networkSelected.mappings.edgesDiscrete.indexOf(edgeMap)]} }]"
+              role="button">
               <b>{{edgeMap.classifier}}</b>
             </a>
           </td>
@@ -237,9 +248,10 @@
         </tr>
       </table>
 
-      <ul *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0"
-          class="list-group mb-2">
-      <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous; let index = index">
+      <ul
+        *ngIf="dataService.networkSelected.mappings && dataService.networkSelected.mappings.edgesContinuous && dataService.networkSelected.mappings.edgesContinuous.length > 0"
+        class="list-group mb-2">
+      <span *ngFor="let edgeMap of dataService.networkSelected.mappings.edgesContinuous; let index = index">
         <li *ngIf="edgeMap.chartValid" class="list-group-item">
           <a (click)="displayMapping(edgeMap.chart, [], 'ec' + index)" role="button">
             <b>{{edgeMap.title[0]}}</b>
@@ -271,7 +283,7 @@
           <b>{{'SIDEBAR_EDIT_TH_CSS_KEY' | translate}}</b>: {{'SIDEBAR_EDIT_TH_CSS_VALUE' | translate}}
         </div>
       </div>
-      <div *ngFor="let s of selectedNetwork.style" class="row border-bottom">
+      <div *ngFor="let s of dataService.networkSelected.style" class="row border-bottom">
         <div class="col">
           <a (click)="graphService.highlightBySelector(s.selector)" data-toggle="tooltip"
              ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{s.selector}}" placement="left"
@@ -280,7 +292,8 @@
         <div class="col">
             <span *ngFor="let css of s.style|keyvalue">
               <b>{{css.key}}</b>: {{css.value}}
-              <span *ngIf="css.value && css.value.toString().indexOf('#') === 0" [ngStyle]="{'background-color': css.value}"
+              <span *ngIf="css.value && css.value.toString().indexOf('#') === 0"
+                    [ngStyle]="{'background-color': css.value}"
                     class="badge badge-pill border">&nbsp;
               </span>
               <br>
@@ -305,7 +318,8 @@
       <div class="form-row">
 
         <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
-        <input [(ngModel)]="highlightNodes" class="form-control mb-2 col-10" id="highlightNodesHex" name="highlightNodesHex"
+        <input [(ngModel)]="highlightNodes" class="form-control mb-2 col-10" id="highlightNodesHex"
+               name="highlightNodesHex"
                placeholder="#0000ff" type="text">
         <span [ngStyle]="{'background-color': highlightNodes}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
@@ -315,7 +329,8 @@
       <div class="form-row">
 
         <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
-        <input [(ngModel)]="highlightEdges" class="form-control mb-2 col-10" id="highlightEdgesHex" name="highlightEdgesHex"
+        <input [(ngModel)]="highlightEdges" class="form-control mb-2 col-10" id="highlightEdgesHex"
+               name="highlightEdgesHex"
                placeholder="#ff00ff" type="text">
         <span [ngStyle]="{'background-color': highlightEdges}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
@@ -323,11 +338,13 @@
       </div>
       <div class="form-row">
         <label for="highlightDuration">{{'SIDEBAR_EDIT_LABEL_DURATION' | translate}}</label>
-        <input [(ngModel)]="highlightDuration" class="form-control mb-2" id="highlightDuration" min="0" name="highlightDuration"
+        <input [(ngModel)]="highlightDuration" class="form-control mb-2" id="highlightDuration" min="0"
+               name="highlightDuration"
                placeholder="2000"
                step="100" type="number">
 
-        <button (click)="setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)" class="btn btn-outline-success btn-block mb-3"
+        <button (click)="setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)"
+                class="btn btn-outline-success btn-block mb-3"
                 type="button">
           {{'SIDEBAR_EDIT_BTN_SUBMIT' | translate}}</button>
 
