[FIX] displaying wrong selected attribute when creating new continuous mapping, was a routing issue

--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -203,7 +203,7 @@
           [attributeListFull]="getAttributeListForCurrentNetworkAndType('ec')"
           [headline]="'MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS'"
           [mappings]="getExistingMappingListForCurrentNetworkAndType('ec')"
-          [type]="'nc'">
+          [type]="'ec'">
         </app-main-mappings-available-attributes>
 
       </div>
