[DONE] creating new mappings with separate component for complex creation form, smaller improvements included, edit mappings currently broken

--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -112,7 +112,7 @@
               type="button">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
-      <!-- edit existing mapping -->
+      <!-- todo edit existing mapping -->
       <button (click)="editMapping()" *ngIf="isEdit"
               [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, mapType + '-1' ]} }]"
               class="btn btn-block btn-outline-success" data-toggle="tooltip"
@@ -123,4 +123,87 @@
       </button>
     </div>
   </div>
+</form>
+
+<form *ngIf="typeHint.nd || typeHint.ed">
+  <div class="form-group row">
+    <label class="col-4 col-form-label"
+           for="{{typeHint.ed ? 'ed' : 'nd'}}CssProperty">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
+    <div class="col-6">
+      <input [(ngModel)]="styleProperty" [readOnly]="isEdit" class="form-control" id="{{typeHint.ed ? 'ed' : 'nd'}}CssProperty"
+             name="{{typeHint.ed ? 'ed' : 'nd'}}CssProperty" type="text">
+      <small class="form-text text-muted">{{'MAIN_MAPPINGS_NEW_CSS_HINT' | translate}}</small>
+      <small *ngIf="needsColorValidation(styleProperty)"
+             class="form-text text-muted">{{'MAIN_MAPPINGS_NEW_COLOR_HINT' | translate}}</small>
+    </div>
+
+    <div class="col-2 form-check">
+      <input (click)="toggleNeedsColorValidation(!needsColorValidation(styleProperty))"
+             [checked]="needsColorValidation(styleProperty)" class="form-check-input"
+             id="{{typeHint.ed ? 'ed' : 'nd'}}ColorValidation"
+             type="checkbox">
+      <label class="form-check-label" for="{{typeHint.ed ? 'ed' : 'nd'}}ColorValidation">
+        {{'MAIN_MAPPINGS_NEW_CB_COLORS' | translate}}
+      </label>
+    </div>
+
+  </div>
+
+  <hr>
+
+  <!-- values and input fields for each value -->
+  <div *ngFor="let entry of discreteMapping; let index = index" class="form-group row">
+    <label class="col-4 col-form-label" for="{{typeHint.ed ? 'ed' : 'nd'}}{{index}}">{{entry.isHR}}</label>
+    <div class="col-6">
+      <input [(ngModel)]="discreteMapping[index].cssValue" class="form-control" id="{{typeHint.ed ? 'ed' : 'nd'}}{{index}}"
+             name="ed{{index}}" type="text"
+             value="{{'MAIN_MAPPINGS_NEW_PLACEHOLDER' | translate}}">
+    </div>
+    <span *ngIf="needsColorValidation(styleProperty)" [ngStyle]="{'background-color': entry.cssValue}"
+          class="badge badge-pill border col-2">
+                &nbsp;
+              </span>
+  </div>
+
+  <!-- SUBMIT/CLEAR/ABORT -->
+  <div class="row">
+    <div class="col-4">
+      <button [routerLink]="['', { outlets: {primary: ['graph', dataService.networkSelected.id ]} }]"
+              class="btn btn-block btn-outline-danger"
+              data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_NEW_ABORT' | translate}}"
+              placement="top"
+              type="button">
+        <fa-icon [icon]="faTimes"></fa-icon>
+      </button>
+    </div>
+    <div class="col-4">
+      <button (click)="clearAllInputs()" class="btn btn-block btn-outline-warning"
+              data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_NEW_CLEAR' | translate}}"
+              placement="top"
+              type="button">
+        <fa-icon [icon]="faUndo"></fa-icon>
+      </button>
+    </div>
+    <div class="col-4">
+      <!-- create new mapping -->
+      <button (click)="submitNewDiscreteMapping()" *ngIf="!isEdit"
+              [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, mapType + (getNextIdForMappingType()) ]} }]"
+              class="btn btn-block btn-outline-success" data-toggle="tooltip"
+              ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
+              placement="top"
+              type="button">
+        <fa-icon [icon]="faCheck"></fa-icon>
+      </button>
+      <!-- todo edit existing mapping -->
+      <button (click)="editMapping()" *ngIf="isEdit"
+              [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, mapType + '-1' ]} }]"
+              class="btn btn-block btn-outline-success" data-toggle="tooltip"
+              ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
+              placement="top"
+              type="button">
+        <fa-icon [icon]="faCheck"></fa-icon>
+      </button>
+    </div>
+  </div>
+
 </form>
